cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p> Hola estudiantes este es mi sitio web
-        sigueme en twitter en hshsmx si tienes 
+    <p> Hola amigos y amigas este es mi sitio web
+        sigueme en twitter si tienen dudas preguntame 
+        en vivo en mi twicht.tv en hshsmx si tienes 
         dudas preguntame.
 
     </p>
